# autism_meri

./: .gitignore  CMakeLists.txt~  README.md  README.md~  package.xml~  recuento
autism_meri/: CMakeLists.txt  package.xml  package.xml~
meri_global/: CMakeLists.txt  CMakeLists.txt~  package.xml
meri_global/launch/: autism_meri_global.launch  autism_meri_global.launch~  face_tracking_kinect2.launch~  focus_estimation.launch  kinect2_bridge.launch~  open_tracking_multicam.launch~  opt_calibration_results.launch~  record_data.launch  record_data.launch~
meri_global/src/: face_tracking_node.cpp~  global_pose_estimation_node.cpp  init_child_image_node.cpp  init_child_image_node.cpp~  local_face_tracking_node.cpp~  local_face_tracking_node.hpp~
meri_local/: CMakeLists.txt~  package.xml
meri_local/launch/: face_tracking_kinect2.launch~  focus_estimation.launch~  kinect2_bridge.launch  kinect2_bridge.launch~  local_face_tracking.launch  local_face_tracking.launch~  open_autism_app_multicam.launch~  opt_calibration_results.launch~  record_data.launch  record_data.launch~
meri_local/src/: face_tracking_node.cpp  global_pose_estimation_node.cpp~  init_child_image_node.cpp~  local_face_tracking_node.cpp  local_face_tracking_node.cpp~  local_face_tracking_node.hpp  local_face_tracking_node.hpp~  visual_focus_estimation_node.cpp~
