<?xml version="1.0"?>
<package>
  <name>autism_meri</name>
  <version>0.0.1</version>
  <description>
    The autism_meri metapackage
  </description>

  <maintainer email="aaramirezd@gmail.com">Andres Ramirez</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>meri_global</run_depend>
  <run_depend>meri_local</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
