<?xml version="1.0"?>
<package format="2">
  <name>meri_local</name>
  <version>0.2.0</version>
  <description>The autism MERI local package</description>

  
  <maintainer email="aaramirezd@gmail.com">Andrés Alberto Ramírez Duque</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>calibration_common</build_depend>
  <build_depend>kinect</build_depend>
  <build_depend>kinect2_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  
  <build_export_depend>calibration_common</build_export_depend>
  <build_export_depend>kinect</build_export_depend>
  <build_export_depend>kinect2_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>rostime</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  
  <exec_depend>calibration_common</exec_depend>
  <exec_depend>kinect</exec_depend>
  <exec_depend>kinect2_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
